# AutonomousDriving-ROSbot-Gazebo

./: .gitignore  Readme.md  UsefulInfo.txt  master  test.py
src/basics/: CMakeLists.txt  package.xml
src/basics/launch/: launchFancy.launch
src/basics/src/: fancy_action_client.py  fancy_action_server.py  topic_publisher.py  topic_subscriber.py
src/rosbot_bath/: CMakeLists.txt  package.xml  run_gazebo_only.sh  run_rosbot.sh  run_rviz.sh  run_teleop.sh
src/rosbot_bath/launch/: gazebo_only.launch  rosbot_bath.launch  rviz_bath.launch
src/rosbot_bath/rviz/: rob_rosbot.rviz
src/rosbot_bath/src/: imu_controller.cpp
src/rosbot_bath/urdf/: rosbot.xacro  rosbot_no_camera.gazebo
src/rosbot_bath/worlds/: 2020_assessment_example.world  2021_assessment.world  turtlebot_playground.world
src/rosbot_data/: CMakeLists.txt  package.xml
src/rosbot_data/src/: clock_time.cpp
src/rosbot_oah33/: CMakeLists.txt  package.xml  run_all.sh  run_master.sh  run_teleop_ROSbot.sh  run_teleop_twist.sh
src/rosbot_oah33/launch/: master.launch  rosbot_teleop_ROSbot.launch  teleop_twist.launch
src/rosbot_oah33/src/: ROSbot_controller.py  braitenberg_exploration.cpp  node_braitenberg.cpp  node_clock_time.cpp  node_comp_results.cpp  node_lidar.cpp  node_master.py  node_teleop_twist.py  teleop_twist_ROSbot.py  thread_controller.py
src/tutorial_pkg/: CMakeLists.txt  package.xml
src/tutorial_pkg/src/: tutorial_pkg_node.cpp  tutorial_pkg_node_intpub.cpp  tutorial_subscriber_node.cpp
